# Tempest

./: DEPLOY.md  Procfile  README.md  app.py  app2.py  database.db  delete_product.py  development.ini  render.yaml  requirements.txt  run.py
Static/CSS/: estilos.css
Template/: Base.html  Index.html
app/: __init__.py  config.py
app/data/: products_seed.json
app/models/: __init__.py  models.py
app/routes/: __init__.py  auth.py  cart.py  main.py  products.py
app/services/: __init__.py  logic.py
app/static/css/: style.css
app/static/js/: main.js
app/templates/: about.html  admin.html  base.html  cart.html  catalog.html  checkout.html  index.html  login.html  order_success.html  orders.html  product.html  register.html  support.html
contact/: MANIFEST.in  README.md  development.ini  production.ini  pyproject.toml  testing.ini
contact/contact/: __init__.py  catalog.py  models.py  test_db.py
contact/contact/alembic/: env.py
contact/contact/models/: __init__.py
contact/contact/templates/: layout.jinja2  mytemplate.jinja2
contact/contact/views/: default.py  notfound.py
contact/tests/: conftest.py  test_functional.py  test_views.py
instance/: tempest.db
templates2/: formulario.html  mientorno.py  tempest.html
templates2/instance/: tempest.db
templates2/static/: backend-bridge.js
templates2/templates/: admin.html  base.html  cart.html  home.html  login.html  orders.html  products.html  register.html  store.html
